# campaign_events

./: .env.example  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  pytest.ini
app/: .env.example  main.py  scheduler.py  scheduler_manager.py
app/alembic/: env.py
app/alembic/versions/: 2025_10_05_1445-b1736f36b35f_created_campaign_and_event_tables.py
app/api/: __init__.py
app/api/campaign/: views.py
app/api/events/: views.py
app/api/scheduler/: views.py
app/campaign/: repository.py  schema.py  service.py
app/core/: config.py
app/core/db/: base_repository.py  db_helper.py
app/core/models/: __init__.py  base.py  campaign.py  event.py
app/events/: repository.py  schema.py  service.py
app/middleware/: error_handler.py
app/utils/: dependencies.py  exceptions.py  helpers.py
docker/: app.sh
tests/: conftest.py  test_campaign_events.py
